fix: spacing and layout of footer

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -62,7 +62,7 @@ img {
 
 .ContentWrapper {
   padding-top: 5rem;
-  padding-bottom: 16rem;
+  padding-bottom: 2rem;
   @media screen and (min-width: $grid-md) {
     padding-top: 5.5rem;
   }
