--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -1,8 +1,5 @@
 .Footer {
   background-color: $colorDarkBlue;
-  position: absolute;
-  bottom: 0;
-  left: 0;
 }
 
 .Footer-iconList {
